# tidb

./: Makefile.common  errors.toml  go.mod  go.sum  insert.go  insert2.go  insert3.go
bindinfo/: handle.go
config/: config.go
ddl/: column.go  column_type_change_test.go  constraint.go  db_test.go  ddl.go  ddl_api.go  ddl_worker.go  delete_range.go  error.go  event.go  index.go  partition.go  rollingback.go  scheduler.go  serial_test.go  table.go
ddl/event/: event_test.go  persistence.go  persistence_test.go
domain/: domain.go
errno/: errcode.go  errname.go
event/: event_test.go  persistence.go  persistence_test.go  scheduler.go
event/model/: event.go
executor/: adapter.go  brie.go  builder.go  ddl.go  executor.go  executor_test.go  infoschema_reader.go  infoschema_reader_test.go  show.go  show_test.go  velox.go
executor/tidb_velox_wrapper/: tidb_velox_wrapper.go
expression/: BUILD.bazel  builtin.go  builtin_info.go  explain.go  util.go
infoschema/: builder.go  error.go  infoschema.go  tables.go
meta/: meta.go  meta_test.go
meta/autoid/: autoid.go
oom_record/record2022-10-12T16:36:38+08:00/: goroutine  heap
oom_record/record2022-10-12T16:37:38+08:00/: goroutine  heap
oom_record/record2022-10-12T16:38:38+08:00/: goroutine  heap
oom_record/record2022-10-12T16:39:38+08:00/: goroutine  heap
oom_record/record2022-10-12T16:40:38+08:00/: goroutine  heap  (+1 more)
pkg/planner/core/rule/: BUILD.bazel  rule_collect_plan_stats.go
session/: bootstrap.go  session.go  session_test.go  txn.go
store/: store.go
types/: field_type.go
util/: misc.go
(+57 files in other folders)
