load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rule",
    srcs = [
        "rule_build_key_info.go",
        "rule_collect_plan_stats.go",
        "rule_init.go",
    ],
    importpath = "github.com/pingcap/tidb/pkg/planner/core/rule",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/domain",
        "//pkg/expression",
        "//pkg/infoschema",
        "//pkg/parser/model",
        "//pkg/planner/core/base",
        "//pkg/planner/core/rule/util",
        "//pkg/planner/util/optimizetrace",
        "//pkg/planner/util/utilfuncp",
        "//pkg/sessionctx/variable",
        "//pkg/table",
        "//pkg/util/logutil",
        "@com_github_pingcap_failpoint//:failpoint",
        "@org_uber_go_zap//:zap",
    ],
)
